[tool.poetry]
name = "highspeedemergency"
version = "0.1.0"
description = ""
authors = ["mikeshinoda <53910940+desonglll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.17.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
torch = "^2.4.1"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
ultralytics = "^8.2.100"
huggingface-hub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

